######################################################################
#
# @file    CMakeLists.txt
#
# @brief   For building ./customizations.
#
# @version $Rev: 6494 $ $Date: 2018-01-31 11:21:22 -0700 (Wed, 31 Jan 2018) $
#
# Copyright &copy; 2018-2020, Tech-X Corporation, Boulder, CO.
# Freely distributable.
#
######################################################################

add_subdirectory(templates)

